Fix title in tablet mode in Safari
- the title string was cropped unexpectedly.

--- a/docs/_sass/custom.scss
+++ b/docs/_sass/custom.scss
@@ -151,6 +151,7 @@ $bg4-y: calc(100% - 224px);
       letter-spacing: -0.31px;
       color: #ffffff;
       overflow: hidden;
+      white-space: nowrap;
     }
   }
 
